--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Lesson 3</title>
     <head>
     <body>
+      <!
        <h1>HELLO</h1>
        <h2>HELLO</h2>
        <h3>HELLO</h3>
@@ -50,6 +51,16 @@
                      <abbr title="Hypertext Markup Language">HTML</abbr>
                      <abbr title="Cascading Style Sheets">CSS</abbr>
                      <abbr title="Good Game">GG</abbr> 
-    </body>
+                     <address>PRISHTINA,Emshir,Rr ali vitia </address>
+                     <blockquote>Lorem Ipsum is simply dummy
+                         text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard 
+                         dummy text ever since the 1500s </blockquote>
+                  <p><q>
+                     Lorem Ipsum has been the industry's standard 
+                     dummy text ever since the 1500s</q></p>
+                     <P>Lorem Ipsum has been the industry's standard 
+                      <cite>dummy text ever since the 1500s</cite></P> 
+
     </head>
     </html>
